fixed footer overflow issue

--- a/src/styling/_homePage.scss
+++ b/src/styling/_homePage.scss
@@ -156,13 +156,14 @@
 
 .ready {
     margin-top: 100px;
+    padding-bottom: 10vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-content: center;
     align-items: center;
-    max-width: 100vw;
-    height: 160vh;
+    width: 100%;
+    height: 100%;
     position: relative;
     h3 {
         font-size: 4.5rem;
