--- a/src/styling/_mobile.scss
+++ b/src/styling/_mobile.scss
@@ -85,7 +85,7 @@
 
     .philosophy{
         h2{
-            font-size: 3.5rem;
+            font-size: 3rem;
         }
     }
 
@@ -99,6 +99,11 @@
     footer{
         .topSection li a{
             font-size: 0.9rem;
+        }
+        .topSection {
+            ul {
+                flex-direction: column;
+            }
         }
         p{
             text-align: center;
